--- a/component-library/components/sections/card-carousel/card-carousel.scss
+++ b/component-library/components/sections/card-carousel/card-carousel.scss
@@ -20,7 +20,7 @@
 
     &__container {
         grid-column: 2;
-        width: 90%;
+        width: 100%;
         justify-self: center;
         overflow: hidden;
 
@@ -35,7 +35,7 @@
        position: absolute;
        left: 0;
        right: 0;
-       top: 60%;
+       bottom: 90px;
        width: calc(100vw - 48px);
        margin: 0 auto;
        max-width: 1280px;
@@ -84,7 +84,15 @@
         right: 0;
         background-color: #000000CC;
     }
-    
+    @media screen and (min-width: 480px) {
+        &__container {
+            width: 90%;
+        }
+        &__navigation {
+            top: 60%;
+            bottom: 0;
+        }
+    }
     @media screen and (min-width: 1024px) {
         &__navigation {
             &__arrow {
